--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,123 @@
+*{
+	margin:0px;
+	padding:0px;
+}
+
 .App {
   text-align: center;
+  color:red;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+
+.header{
+	
+	background:#003366;
+	
+	
+	
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.App-logo{
+	border:0.1px white solid;
+	border-radius:30px;
+	padding:3px;
+	
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.tilte{
+	color:white;
+	text-align:center;
 }
 
-.App-link {
-  color: #61dafb;
+.main-nav{
+
+	
+}
+.nav{
+	
+	display:flex;
+	flex-direction:row;
+	justify-content:center;
+	
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.nav-item {
+	list-style:none;
+	padding:10px;
+
+}
+.nav-item a{
+	text-decoration:none;
+	color:#a6a6a6;
+	font-size:20px;
+}
+
+.active{
+	color:white !important;
+}
+
+
+.article{
+	background:#003366;
+	color:white;
+	padding:20px;
+}
+.article>h2{
+	
+	color:white;
+}
+
+.containner .ContainnerHome {
+	
+	background:green;
+	
+}
+.containner{
+	
+	background:green;
+	
+}
+
+
+.TitleArea{
+	text-align:center;
+	color:white;
+	padding:4px;
+}
+
+.Images-Containner{
+	background:#003366;
+	color:white;
+	padding:30px;
+	margin:10px;
+	border-radius:8px;
+	
+}
+.Images-Containner>.TitleImages{
+		
+		text-align:center;
+		margin-bottom:4px;
+		
+}
+.Images-Containner>.TitleImages>a{
+	color:white;
+	text-decoration:none;
+}
+
+.ImagesPost{
+	width:100%;
+	height:180px;
+	object-fit:fill;
+	
+}
+
+
+
+.footer{
+	margin-top:10px;
+background:#003366;
+	color:white;
+	padding:10px;
+	text-align:center;
+	
 }
